force-app/main/default/objects/PriceElement__c/PriceElement__c.object-meta.xml
<CustomObject>
    <description>Used to store prices that will be sent to SAP</description>
    <label>Price Element</label>
    <nameField>
        <displayFormat>PE-{0000000000}</displayFormat>
        <label>Price Element Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Elements</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>