force-app/main/default/objects/PriceElement__c/fields/lkp_OrderItem__c.field-meta.xml
<CustomField>
    <fullName>lkp_OrderItem__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Order Item for which the price element is created</description>
    <label>Order Line Item</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Price Elements</relationshipLabel>
    <relationshipName>PriceElements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>