force-app/main/default/objects/PriceElement__c/fields/num_ConditionRateValue__c.field-meta.xml
<CustomField>
    <fullName>num_ConditionRateValue__c</fullName>
    <description>The price that will be sent to SAP</description>
    <label>Condition Rate Value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>