force-app/main/default/objects/PriceElement__c/fields/pkl_ConditionCurrency__c.field-meta.xml
<CustomField>
    <fullName>pkl_ConditionCurrency__c</fullName>
    <description>The ISO Code of currency used in the price element</description>
    <label>Condition Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>pkl_ConditionCurrency</valueSetName>
    </valueSet>
</CustomField>