force-app/main/default/objects/PriceElement__c/fields/pkl_ConditionType__c.field-meta.xml
<CustomField>
    <fullName>pkl_ConditionType__c</fullName>
    <description>Specifies the type of the condition rate value</description>
    <label>Condition Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>pkl_ConditionType</valueSetName>
    </valueSet>
</CustomField>